--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,9 @@
         "128": "images/get_started128.png"
   	}
   },
+  "chrome_url_overrides":{
+    "newtab": "newTab.html"
+  },
   "icons": {
       "16": "images/get_started16.png",
       "32": "images/get_started32.png",
