--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
  "content_scripts": [
    {
      "matches": ["http://*/*","https://*/*"],
+     "run_at": "document_start",
      "js": ["contentScript.js"]
    }
  ],
